--- a/WebA/pom.xml
+++ b/WebA/pom.xml
@@ -11,6 +11,7 @@
   <url>http://maven.apache.org</url>
 
   <dependencies>
+      
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
@@ -22,6 +23,11 @@
       <artifactId>jsp-api</artifactId>
       <version>2.1</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>4.3.10.Final</version>
     </dependency>
   </dependencies>
 
