Tarea. Servlet Portalito @daton

--- a/WebA/src/main/webapp/WEB-INF/web.xml
+++ b/WebA/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,10 @@
         <servlet-name>ServletGuardarUsuario</servlet-name>
         <servlet-class>com.unitec.weba.ServletGuardarUsuario</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ServletPortalito</servlet-name>
+        <servlet-class>com.unitec.weba.ServletPortalito</servlet-class>
+    </servlet>
     <servlet-mapping>
         <!-- Nombre de como lo identifica la parte Cliente -->
         <servlet-name>ServletAutenticar</servlet-name>
@@ -20,6 +24,10 @@
     <servlet-mapping>
         <servlet-name>ServletGuardarUsuario</servlet-name>
         <url-pattern>/guardar-usuario</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ServletPortalito</servlet-name>
+        <url-pattern>/portalito</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
