--- a/WebA/pom.xml
+++ b/WebA/pom.xml
@@ -40,10 +40,21 @@
       <version>5.1.35</version>
     </dependency>
     <dependency>
+	<groupId>com.fasterxml.jackson.core</groupId>
+	<artifactId>jackson-core</artifactId>
+	<version>2.5.4</version>
+    </dependency>
+    <dependency>
       <groupId>javax.annotation</groupId>
       <artifactId>jsr250-api</artifactId>
       <version>1.0</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.4.4</version>
+      <type>jar</type>
     </dependency>
   </dependencies>
 
